<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/site_content_bg" >

    <RelativeLayout
        android:id="@+id/about_head_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_70"
        android:background="@color/head_layout_bg" >

        <TextView
            android:id="@+id/about_back"
            style="@style/site_listview_item_text_style_middle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/space_8"
            android:drawableLeft="@mipmap/icon_register_back"
            android:drawablePadding="4dp"
            android:text="@string/back"
            android:textColor="@color/back_color" />

        <TextView
            android:id="@+id/about_title"
            style="@style/site_listview_item_text_style_title"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textColor="@color/main_color_black" />

        <View
            style="@style/divier_line"
            android:layout_alignParentBottom="true"
            android:background="@color/horzontal_line_color" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_head_layout"
        android:layout_marginTop="96dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            style="@style/site_listview_item_text_style_middle"
            android:text="@string/about_my"
            android:textColor="@color/main_color_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_24"
            android:layout_marginTop="@dimen/space_24"
            android:contentDescription="@null"
            android:src="@mipmap/icon_logo" />

        <TextView
            style="@style/site_listview_item_text_style_middle"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/about_content"
            android:textColor="@color/main_color_black" />

        <TextView android:id="@+id/about_version"
            style="@style/site_listview_item_text_style_middle"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/about_version"
            android:textColor="@color/main_color_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/space_24"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            style="@style/site_listview_item_text_style_middle"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/company"
            android:textColor="@color/main_color_black" />

        <TextView
            style="@style/site_listview_item_text_style_middle"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/compant_net"
            android:textColor="@color/main_color_black" />
    </LinearLayout>

</RelativeLayout>