<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/site_content_bg" >

    <RelativeLayout
        android:id="@+id/feedback_head_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:background="@color/head_layout_bg" >

        <TextView
            android:id="@+id/feedback_back"
            style="@style/listview_item_text_style_middle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/space_8"
            android:drawableLeft="@drawable/icon_register_back"
            android:drawablePadding="4dp"
            android:text="@string/back"
            android:textColor="@color/back_color" />

        <TextView
            android:id="@+id/feedback_title"
            style="@style/listview_item_text_style_big"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textColor="@color/black_color" />

        <View
            style="@style/divier_line"
            android:layout_alignParentBottom="true"
            android:background="@color/light_white_color" />
    </RelativeLayout>

    <EditText
        android:id="@+id/add_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_head_layout"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/edit_feedback_bg"
        android:gravity="top"
        android:hint="@string/add_feedback"
        android:minLines="10"
        android:padding="@dimen/space_8"
        android:textColorHint="@color/light_white_color"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/black_color" />

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_feedback"
        android:layout_margin="16dp"
        android:background="@drawable/btn_selector"
        android:text="@string/commit"
        android:textColor="@color/font_white"
        android:textSize="16sp" />

</RelativeLayout>