<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_layout_bg"
    android:orientation="vertical">

    <com.jianfanjia.cn.view.MainHeadView
        android:id="@+id/my_setting_head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/head_layout_bg" />

    <ScrollView
        android:id="@+id/setting_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_setting_head_layout"
        android:layout_marginTop="@dimen/space_8">

        <LinearLayout
            android:id="@+id/rootview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/mespush_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/message_push"
                    android:textColor="@color/black_color" />

                <ToggleButton
                    android:id="@+id/mespush_toggle"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_setting_msg_selector"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/share_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/share"
                    android:textColor="@color/black_color" />

                <ImageView
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/current_version_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/current_version"
                    android:textColor="@color/black_color" />

                <TextView
                    android:id="@+id/current_version"
                    style="@style/listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/current_version_example"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/clear_cache_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/clear_cache"
                    android:textColor="@color/black_color" />

                <TextView
                    android:id="@+id/cache_size"
                    style="@style/listview_item_text_style_middle"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/cache_size"
                    android:textColor="@color/main_color_grey" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <View
                style="@style/divier_line"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:id="@+id/feedback_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/feedback"
                    android:textColor="@color/black_color" />

                <ImageView
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/help_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/my_help"
                    android:textColor="@color/black_color" />

                <ImageView
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <RelativeLayout
                android:id="@+id/about_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerVertical="true"
                    android:text="@string/about"
                    android:textColor="@color/black_color" />

                <ImageView
                    style="@style/my_item_layout_image_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />
            </RelativeLayout>

            <View style="@style/divier_line" />

            <View
                style="@style/divier_line"
                android:layout_marginTop="@dimen/space_16" />

            <RelativeLayout
                android:id="@+id/logout_layout"
                style="@style/my_list_item_layout_style">

                <TextView
                    style="@style/listview_item_text_style_middle"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/logout"
                    android:textColor="@color/orange_color" />
            </RelativeLayout>

            <View style="@style/divier_line" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
