<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register" >

    <include
        android:id="@+id/register_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/register_head_layout" />

    <LinearLayout
        android:id="@+id/verify_tip_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_top"
        android:layout_marginTop="@dimen/space_16"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            style="@style/site_listview_item_text_style_small"
            android:text="@string/verification_code_sended"
            android:textColor="@color/font_white" />

        <TextView
            android:id="@+id/register_tip"
            style="@style/site_listview_item_text_style_small"
            android:textColor="@color/font_reg_color2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_tip_layout"
        android:layout_marginLeft="@dimen/space_48"
        android:layout_marginRight="@dimen/space_48"
        android:layout_marginTop="@dimen/space_24"
        android:orientation="vertical" >

        <LinearLayout style="@style/item_input_container" >

            <EditText
                android:id="@+id/et_verification"
                style="@style/item_input_edittext"
                android:layout_marginLeft="@dimen/space_8"
                android:hint="@string/hint_verification"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_commit"
            style="@style/button_login_style"
            android:layout_marginTop="16dp"
            android:text="@string/commit" />
    </LinearLayout>

</RelativeLayout>